--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -2,9 +2,9 @@
   background-color: #ece0d5;
   width: 220px;
   height: 300px;
-  background: #d76e6ed9;
-  border: 2px solid #035476ee;
-  box-shadow: 4px 4px #035476;
+  background: #ece0d5;
+  border: 2px solid #03293a;
+  box-shadow: 4px 4px #03293a;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@
 
 .card-details {
   text-align: center;
-  color: #035476ee;
+  color: #03293a;
   font-size: 1rem;
   font-weight: 700;
 }
