--- a/src/app/pages/student-dashboard/student-dashboard.component.scss
+++ b/src/app/pages/student-dashboard/student-dashboard.component.scss
@@ -1,30 +1,27 @@
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
   img {
     max-width: 350px;
     bottom: 0;
     position: sticky;
   }
 
-  .img-container {
+  .internal-container {
     height: 100%;
-    min-height: 90vh;
-    display: flex;
-    align-items: end;
+    min-height: 92vh;
   }
 
-  .img-container > div {
+  .internal-container > div {
     position: relative;
-
     i {
       position: absolute;
-      top: 0px;
-      left: 0px;
+      top: -20px;
+      right: 0px;
     }
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 996px) {
   img {
     max-width: 250px;
   }
-} */
+}
