--- a/src/app/pages/professional-dashboard/professional-dashboard.component.html
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.html
@@ -4,14 +4,18 @@
     <!-- Colonna Foto -->
     <div class="col-10 col-md-4 mx-auto">
       <div *ngIf="!editingPhoto" class="d-flex img-container">
-        <div *ngIf="professional?.appUser" class="text-center">
+        <!-- prettier-ignore -->
+        <div
+          *ngIf="professional || user"
+          class="text-center"
+        >
           <img
-            [src]="professional.appUser.profilePicture"
-            alt="Profile Picture"
+          [src]="professional?.appUser?.profilePicture || user?.profilePicture"
+
             class="img-fluid"
           />
         </div>
-        <div *ngIf="checkOwnership()">
+        <div *ngIf="isOwner">
           <button
             class="border-0 bg-background rounded-0"
             (click)="editPhoto()"
@@ -39,11 +43,27 @@
           <span *ngIf="fileName">{{ fileName }}</span>
         </div>
         <div class="d-flex mt-3 mx-auto">
-          <button (click)="savePhoto()" class="custom-button border-blu me-3">
-            <span class="text-blu">Save</span>
+          <button
+            (click)="handleProfilePicture()"
+            [ngClass]="{
+              'custom-button': true,
+              'button-small': true,
+              'border-blu': profilePicture,
+              'border-rosso': !profilePicture,
+              'me-3': true
+            }"
+          >
+            <span
+              [ngClass]="{
+                'text-blu': profilePicture,
+                'text-rosso': !profilePicture
+              }"
+            >
+              {{ profilePicture ? "Save" : "Delete" }}
+            </span>
           </button>
           <button (click)="cancelPhotoEdit()" class="custom-button border-blu">
-            <span class="text-blu">Cancel</span>
+            <span class="text-blu button-small">Cancel</span>
           </button>
         </div>
       </div>
@@ -55,41 +75,51 @@
     >
       <div *ngIf="!editingDetails">
         <div
-          *ngIf="professional?.appUser"
+          *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
         >
           <h6>NAME&nbsp;</h6>
-          <h6 class="fw-light">{{ professional.appUser.name }}</h6>
+          <h6 class="fw-light">
+            {{ professional?.appUser?.name || user?.name }}
+          </h6>
         </div>
         <div
-          *ngIf="professional?.appUser"
+          *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
         >
           <h6>SURNAME&nbsp;</h6>
-          <h6 class="fw-light">{{ professional.appUser.surname }}</h6>
+          <h6 class="fw-light">
+            {{ professional?.appUser?.surname || user?.surname }}
+          </h6>
         </div>
         <div
-          *ngIf="professional?.appUser"
+          *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
         >
           <h6>E-MAIL&nbsp;</h6>
-          <h6 class="fw-light">{{ professional.appUser.email }}</h6>
+          <h6 class="fw-light">
+            {{ professional?.appUser?.email || user?.email }}
+          </h6>
         </div>
         <div
-          *ngIf="professional?.appUser"
+          *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
         >
           <h6>DATE OF BIRTH&nbsp;</h6>
-          <h6 class="fw-light">{{ professional.appUser.dateOfBirth }}</h6>
+          <h6 class="fw-light">
+            {{ professional?.appUser?.dateOfBirth || user?.dateOfBirth }}
+          </h6>
         </div>
         <div
-          *ngIf="professional?.appUser"
+          *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
         >
           <h6>USERNAME&nbsp;</h6>
-          <h6 class="fw-light">{{ professional.appUser.username }}</h6>
+          <h6 class="fw-light">
+            {{ professional?.appUser?.username || user?.username }}
+          </h6>
         </div>
-        <div *ngIf="checkOwnership()">
+        <div *ngIf="isOwner">
           <button (click)="editDetails()" class="custom-button border-blu">
             <span class="text-blu">Edit Details</span>
           </button>
@@ -182,12 +212,19 @@
               {{ edu.university?.name }} - {{ edu.faculty?.name }} -
               {{ edu.degreeCourse?.name }}
             </p>
+            <button
+              *ngIf="isOwner"
+              class="custom-button button-small border-rosso"
+              (click)="edu.id && deleteEducationalPath(edu.id)"
+            >
+              <span class="text-rosso">Delete</span>
+            </button>
           </div>
         </div>
         <ng-template #noEdu>
           <p>No educational path added.</p>
         </ng-template>
-        <div *ngIf="checkOwnership()" class="mt-2">
+        <div *ngIf="isOwner" class="mt-2">
           <button
             (click)="addEducationalPath()"
             class="custom-button border-blu"
@@ -247,13 +284,13 @@
     <div class="col-10 col-md-4 mx-auto">
       <div *ngIf="!editingProfession">
         <h6>Profession</h6>
-        <p *ngIf="professional; else noProf">
-          {{ professional.profession.name }}
+        <p *ngIf="professional?.profession; else noProf">
+          {{ professional.profession?.name }}
         </p>
         <ng-template #noProf>
           <p>No profession set.</p>
         </ng-template>
-        <div *ngIf="checkOwnership()" class="mt-2">
+        <div *ngIf="isOwner" class="mt-2">
           <button (click)="editProfession()" class="custom-button border-blu">
             <span class="text-blu">Edit Profession</span>
           </button>
@@ -268,7 +305,7 @@
           >
             <option value="">Select Sector</option>
             <option *ngFor="let sector of sectorsList" [value]="sector.id">
-              {{ sector.name }}
+              {{ sector?.name }}
             </option>
           </select>
           <select formControlName="id" class="form-select mb-2">
@@ -303,7 +340,7 @@
         <ng-template #noStory>
           <p>No written story added.</p>
         </ng-template>
-        <div *ngIf="checkOwnership()" class="mt-2">
+        <div *ngIf="isOwner" class="mt-2">
           <button (click)="editWrittenStory()" class="custom-button border-blu">
             <span class="text-blu">Edit Story</span>
           </button>
@@ -348,28 +385,98 @@
         <ng-template #noVideo>
           <p>No video story added.</p>
         </ng-template>
-        <div *ngIf="checkOwnership()" class="mt-2">
+        <div *ngIf="isOwner" class="mt-2">
           <button (click)="editVideo()" class="custom-button border-blu">
             <span class="text-blu">Edit Video</span>
           </button>
         </div>
       </div>
-      <div *ngIf="editingVideo">
-        <input
-          type="file"
-          (change)="onVideoSelected($event)"
-          class="form-control mb-2"
-        />
-        <div *ngIf="fileName" class="mb-2">{{ fileName }}</div>
-        <div class="d-flex justify-content-center">
-          <button (click)="saveVideo()" class="custom-button border-blu me-2">
-            <span class="text-blu">Save Video</span>
+      <div *ngIf="editingVideo" class="d-flex flex-column my-auto">
+        <div class="d-flex flex-column my-3 mx-auto">
+          <div class="d-flex align-items-center">
+            <label for="video" class="form-label me-3">Video Story</label>
+            <input
+              id="video"
+              type="file"
+              (change)="onVideoSelected($event)"
+              class="hidden-input"
+            />
+            <button class="custom-button border-blu">
+              <label class="text-blu" for="video">Choose it</label>
+            </button>
+          </div>
+          <span *ngIf="fileName">{{ fileName }}</span>
+        </div>
+        <div class="d-flex mt-3 mx-auto">
+          <button
+            (click)="handleVideo()"
+            [ngClass]="{
+              'custom-button': true,
+              'border-blu': videoFile,
+              'border-rosso': !videoFile,
+              'me-3': true
+            }"
+          >
+            <span
+              [ngClass]="{
+                'text-blu': videoFile,
+                'text-rosso': !videoFile
+              }"
+            >
+              {{ videoFile ? "Save" : "Delete" }}
+            </span>
           </button>
           <button (click)="cancelVideo()" class="custom-button border-blu">
             <span class="text-blu">Cancel</span>
           </button>
         </div>
       </div>
+    </div>
+
+    <div class="col-10 col-md-7 mt-3 mt-md-0 d-flex mx-auto">
+      <div class="mx-md-auto">
+        <button
+          type="button"
+          (click)="deleteProfessional()"
+          class="custom-button button-large border-rosso"
+        >
+          <span class="text-rosso">Delete Account</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  *ngIf="toastMessage"
+  class="toast-container shadow-lg position-fixed top-0 end-0 m-3"
+>
+  <div
+    class="toast show rounded-0 border-0"
+    role="alert"
+    aria-live="assertive"
+    aria-atomic="true"
+  >
+    <div class="toast-header bg-background rounded-0 border-0">
+      @if (response) {
+      <strong class="me-auto">Account deleted!</strong>
+
+      }
+      <small class="text-dark">now</small>
+      <button
+        (click)="clearToast()"
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
+    </div>
+
+    <div
+      [ngClass]="response ? 'bg-verde text-dark' : 'bg-rosso text-white'"
+      class="toast-body rounded-0 border-0"
+    >
+      {{ toastMessage }}
     </div>
   </div>
 </div>
