--- a/src/app/pages/professional-dashboard/professional-dashboard.component.html
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.html
@@ -433,7 +433,7 @@
       </div>
     </div>
 
-    <div class="col-10 col-md-7 mt-3 mt-md-0 d-flex mx-auto">
+    <div *ngIf="isOwner" class="col-10 col-md-7 mt-3 mt-md-0 d-flex mx-auto">
       <div class="mx-md-auto">
         <button
           type="button"
