--- a/src/app/pages/favourite/favourite.component.html
+++ b/src/app/pages/favourite/favourite.component.html
@@ -1,3 +1,26 @@
 <div class="container">
-  <p>favourite works!</p>
+  <div class="row mt-5">
+    <div
+      *ngFor="let professional of professionals"
+      class="col-10 col-sm-6 col-md-4 col-lg-3 mt-5 mx-auto mx-sm-0 mb-5"
+    >
+      <app-card [professional]="professional"></app-card>
+    </div>
+
+    <div
+      *ngIf="pageable.totalElements != 0"
+      class="col-12 mt-5 d-flex justify-content-end"
+    >
+      <ngb-pagination
+        [collectionSize]="pageable.totalElements || 0"
+        [(page)]="currentPage"
+        [pageSize]="pageable.size || 10"
+        [maxSize]="5"
+        [rotate]="true"
+        [ellipses]="false"
+        [boundaryLinks]="true"
+        (pageChange)="pageChanged($event)"
+      ></ngb-pagination>
+    </div>
+  </div>
 </div>
