--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="mb-5 mt-5 text-center">Enter your credentials here</h4>
+  <h4 class="mb-5 mt-5 text-center fw-light">Enter your credentials here</h4>
   <form [formGroup]="form" (ngSubmit)="login()">
     <div class="row justify-content-center">
       <div class="col-10 col-md-6 d-flex flex-column align-items-center">
