--- a/src/styles.scss
+++ b/src/styles.scss
@@ -167,15 +167,15 @@ select::placeholder {
 
 //pagination
 .pagination .page-link {
-  color: #035476ee;
+  color: #03293a;
   background-color: #f5f5f5;
-  border: 1px solid #035476ee;
+  border: 1px solid #03293a;
   border-radius: 0px !important;
 }
 
 .pagination .page-item.active .page-link {
   background-color: #a9edc4;
-  border-color: #035476ee;
+  border-color: #03293a;
   outline: none;
   box-shadow: none;
 }
