--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -2,21 +2,21 @@
   <div class="row">
     <div class="col-10 col-md-6 col-lg-5 mx-auto mt-5">
       <div class="d-flex flex-column align-items-center">
-        <h2 class="mb-5 text-center fw-light">
+        <h4 class="mb-5 text-center fw-light pb-md-5">
           Do you remember when you wanted to be an Astronaut?
-        </h2>
-        <img src="pexels-amina-filkins-5561457.png" alt="" />
+        </h4>
+        <img src="2.png" alt="" />
       </div>
     </div>
     <div
       class="d-none d-md-block col-md-6 col-lg-5 mx-auto text-center mt-auto"
     >
-      <img src="pexels-amina-filkins-5561459.png" alt="" />
+      <img src="3.png" alt="" />
     </div>
     <div class="col-10 col-md-12 mt-5 mx-auto text-center">
       <div class="d-flex flex-column align-items-center">
-        <h2 class="text-center fw-light mb-3">...a Scientist?</h2>
-        <img src="pexels-mart-production-8471835-Photoroom.png" alt="" />
+        <h4 class="text-center fw-light mb-3">...a Scientist?</h4>
+        <img src="1.png" alt="" />
       </div>
     </div>
 
@@ -29,24 +29,40 @@
         </h4>
       </div>
     </div>
-    <div class="col-10 col-md-6 text-center my-5 mx-auto text-center">
-      <div class="d-flex flex-column align-items-center">
-        <h4 class="fw-light">Register as</h4>
-        <div class="d-flex align-items-center justify-content-between">
+    <div class="col-10 col-md-6 text-center my-auto mx-auto text-center">
+      <div class="d-flex">
+        <div class="mx-auto d-flex align-items-center my-auto">
+          <h4 class="fw-light me-3">Register as</h4>
+
           <button
             class="custom-button mt-2 mb-3 me-2 border-blu"
             routerLink="/auth/registerStudent"
           >
             <span class="text-blu fs-6"> Student </span>
           </button>
-          <h4 class="fw-light">or</h4>
-          <button
-            class="custom-button button-large mt-2 mb-3 ms-2 border-blu"
-            routerLink="/auth/registerProfessional"
-          >
-            <span class="text-blu fs-6"> Professional </span>
-          </button>
         </div>
+      </div>
+    </div>
+
+    <div class="d-flex align-items-end col-10 col-md-6 mt-5 mx-auto">
+      <img class="mx-auto" src="4.png" alt="" />
+    </div>
+
+    <div class="col-10 col-md-6 mx-auto text-center my-auto">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center my-5"
+      >
+        <h4 class="fw-light me-2">
+          If you've already landed your dream job, register as
+        </h4>
+
+        <button
+          class="custom-button button-large mt-2 mb-3 me-2 border-blu"
+          routerLink="/auth/registerProfessional"
+        >
+          <span class="text-blu fs-6"> Professional </span>
+        </button>
+        <h4 class="fw-light">and share your story!</h4>
       </div>
     </div>
   </div>
