landing page done

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 
 $custom-colors: (
   "background": #f5f5f5,
-  "blu": #03293a,
+  "blu": #035476ee,
   "verde": #a9edc4,
   "rosso": #e34444,
   "secondarybg": #f3ebe2,
