--- a/src/app/pages/professional-dashboard/professional-dashboard.component.html
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.html
@@ -1,24 +1,5 @@
 <div class="container">
-  <div class="row">
-    <button
-      (click)="toggleFavourite()"
-      [ngClass]="{
-        'custom-button': true,
-        'button-large': isFavourite,
-        'border-blu': !isFavourite,
-        'border-rosso': isFavourite,
-        'me-3': true
-      }"
-    >
-      <span
-        [ngClass]="{
-          'text-blu': !isFavourite,
-          'text-rosso': isFavourite
-        }"
-      >
-        {{ isFavourite ? "Remove Fav" : "Add Fav" }}
-      </span>
-    </button>
+  <div class="row mt-5 align-items-start">
     <div class="col-10 col-md-4 mx-auto">
       <div *ngIf="!editingPhoto" class="d-flex img-container">
         <div *ngIf="professional || user" class="text-center">
@@ -85,9 +66,9 @@
 
     <!-- Colonna Dettagli Personali -->
     <div
-      class="col-10 col-md-4 mt-5 d-flex flex-column justify-content-start mx-auto"
+      class="col-10 col-md-4 mt-5 mt-md-0 d-flex flex-column justify-content-start mx-auto"
     >
-      <div *ngIf="!editingDetails">
+      <div *ngIf="!editingDetails" class="mx-md-auto">
         <div
           *ngIf="professional || user"
           class="d-flex flex-column justify-content-center mb-2"
@@ -126,13 +107,20 @@
         </div>
 
         <div *ngIf="isOwner">
-          <button (click)="editDetails()" class="custom-button border-blu">
-            <span class="text-blu">Edit Details</span>
+          <button
+            (click)="editDetails()"
+            class="custom-button button-small border-blu"
+          >
+            <span class="text-blu">Edit</span>
           </button>
         </div>
       </div>
-      <div *ngIf="editingDetails">
-        <form [formGroup]="detailsForm" (ngSubmit)="saveDetails()">
+      <div *ngIf="editingDetails" class="mx-auto">
+        <form
+          [formGroup]="detailsForm"
+          (ngSubmit)="saveDetails()"
+          class="mx-auto"
+        >
           <div class="input-wrapper mb-3">
             <input
               id="name"
@@ -190,18 +178,46 @@
             />
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="custom-button border-blu me-2">
+            <button
+              type="submit"
+              class="custom-button button-small border-blu me-2"
+            >
               <span class="text-blu">Save</span>
             </button>
             <button
               type="button"
               (click)="cancelDetailsEdit()"
-              class="custom-button border-blu"
+              class="custom-button button-small border-blu"
             >
               <span class="text-blu">Cancel</span>
             </button>
           </div>
         </form>
+      </div>
+    </div>
+
+    <!-- colonna bottone preferiti -->
+    <div *ngIf="!isOwner" class="col-10 col-md-4 mt-3 mt-md-0 mx-auto">
+      <div class="d-flex justify-content-center">
+        <button
+          (click)="toggleFavourite()"
+          [ngClass]="{
+            'custom-button': true,
+            'button-large': isFavourite,
+            'border-blu': !isFavourite,
+            'border-rosso': isFavourite,
+            'me-3': true
+          }"
+        >
+          <span
+            [ngClass]="{
+              'text-blu': !isFavourite,
+              'text-rosso': isFavourite
+            }"
+          >
+            {{ isFavourite ? "Remove Fav" : "Add Fav" }}
+          </span>
+        </button>
       </div>
     </div>
   </div>
@@ -213,7 +229,7 @@
       <div *ngIf="!editingEducationalPath">
         <h6>Educational Path</h6>
         <div *ngIf="professional?.educationalPaths; else noEdu">
-          <div *ngFor="let edu of professional.educationalPaths">
+          <div *ngFor="let edu of professional.educationalPaths" class="mt-3">
             <p>
               {{ edu.university?.name }} - {{ edu.faculty?.name }} -
               {{ edu.degreeCourse?.name }}
@@ -230,12 +246,12 @@
         <ng-template #noEdu>
           <p>No educational path added.</p>
         </ng-template>
-        <div *ngIf="isOwner" class="mt-2">
+        <div *ngIf="isOwner" class="mt-4">
           <button
             (click)="addEducationalPath()"
-            class="custom-button border-blu"
+            class="custom-button button-small border-blu"
           >
-            <span class="text-blu">Add Path</span>
+            <span class="text-blu">Add</span>
           </button>
         </div>
       </div>
@@ -244,32 +260,42 @@
           [formGroup]="educationalPathForm"
           (ngSubmit)="saveEducationalPath()"
         >
-          <select
-            formControlName="universityId"
-            (change)="onUniversityChange()"
-            class="form-select mb-2"
-          >
-            <option value="">Select University</option>
-            <option *ngFor="let uni of universities" [value]="uni.id">
-              {{ uni.name }}
-            </option>
-          </select>
-          <select
-            formControlName="facultyId"
-            (change)="onFacultyChange()"
-            class="form-select mb-2"
-          >
-            <option value="">Select Faculty</option>
-            <option *ngFor="let fac of faculties" [value]="fac.id">
-              {{ fac.name }}
-            </option>
-          </select>
-          <select formControlName="degreeCourseId" class="form-select mb-2">
-            <option value="">Select Degree Course</option>
-            <option *ngFor="let course of degreeCourses" [value]="course.id">
-              {{ course.name }}
-            </option>
-          </select>
+          <div class="input-wrapper mb-3">
+            <select
+              formControlName="universityId"
+              (change)="onUniversityChange()"
+              class="input-box bg-background"
+            >
+              <option value="">Select University</option>
+              <option *ngFor="let uni of universities" [value]="uni.id">
+                {{ uni.name }}
+              </option>
+            </select>
+          </div>
+          <div class="input-wrapper mb-3">
+            <select
+              formControlName="facultyId"
+              (change)="onFacultyChange()"
+              class="input-box bg-background"
+            >
+              <option value="">Select Faculty</option>
+              <option *ngFor="let fac of faculties" [value]="fac.id">
+                {{ fac.name }}
+              </option>
+            </select>
+          </div>
+          <div class="input-wrapper mb-3">
+            <select
+              formControlName="degreeCourseId"
+              class="input-box bg-background"
+            >
+              <option value="">Select Degree Course</option>
+              <option *ngFor="let course of degreeCourses" [value]="course.id">
+                {{ course.name }}
+              </option>
+            </select>
+          </div>
+
           <div class="d-flex justify-content-center">
             <button type="submit" class="custom-button border-blu me-2">
               <span class="text-blu">Save</span>
@@ -304,22 +330,26 @@
       </div>
       <div *ngIf="editingProfession">
         <form [formGroup]="professionForm" (ngSubmit)="saveProfession()">
-          <select
-            formControlName="sectorId"
-            (change)="onSectorChange($event)"
-            class="form-select mb-2"
-          >
-            <option value="">Select Sector</option>
-            <option *ngFor="let sector of sectorsList" [value]="sector.id">
-              {{ sector?.name }}
-            </option>
-          </select>
-          <select formControlName="id" class="form-select mb-2">
-            <option value="">Select Profession</option>
-            <option *ngFor="let prof of professionsList" [value]="prof.id">
-              {{ prof.name }}
-            </option>
-          </select>
+          <div class="input-wrapper mb-3">
+            <select
+              formControlName="sectorId"
+              (change)="onSectorChange($event)"
+              class="input-box bg-background"
+            >
+              <option value="">Select Sector</option>
+              <option *ngFor="let sector of sectorsList" [value]="sector.id">
+                {{ sector?.name }}
+              </option>
+            </select>
+          </div>
+          <div class="input-wrapper mb-3">
+            <select formControlName="id" class="input-box bg-background">
+              <option value="">Select Profession</option>
+              <option *ngFor="let prof of professionsList" [value]="prof.id">
+                {{ prof.name }}
+              </option>
+            </select>
+          </div>
           <div class="d-flex justify-content-center">
             <button type="submit" class="custom-button border-blu me-2">
               <span class="text-blu">Save</span>
