--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -3,8 +3,8 @@
   width: 220px;
   height: 300px;
   background: #f3ebe2;
-  border: 2px solid #03293a;
-  box-shadow: 4px 4px #03293a;
+  border: 2px solid #035476ee;
+  box-shadow: 4px 4px #035476ee;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
@@ -48,5 +48,5 @@
 .custom-button::before,
 .custom-button::after {
   background: #f3ebe2;
-  border-color: #03293a;
+  border-color: #035476ee;
 }
